🩹 Fix z-index of header to cover other elements

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -9,7 +9,7 @@
 
   border-bottom: 1px solid #c8c8c8;
 
-  z-index: 10;
+  z-index: 11;
 }
 
 .header > .inner {
